# softfloat-wrapper

./: Cargo.toml  README.md
.github/workflows/: regression.yml
src/: bf16.rs  f128.rs  f16.rs  f32.rs  f64.rs  lib.rs
