[package]
name = "softfloat-wrapper"
version = "0.1.3-pre"
authors = ["dalance@gmail.com"]
repository = "https://github.com/dalance/softfloat-wrapper"
keywords = ["softfloat"]
categories = ["api-bindings", "mathematics"]
license = "MIT OR Apache-2.0"
readme = "README.md"
description = "a safe wrapper of Berkeley SoftFloat based on softfloat-sys"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default              = ["8086-sse"]
8086                 = ["softfloat-sys/8086"]
8086-sse             = ["softfloat-sys/8086-sse"]
arm-vfpv2            = ["softfloat-sys/arm-vfpv2"]
arm-vfpv2-defaultnan = ["softfloat-sys/arm-vfpv2-defaultnan"]
riscv                = ["softfloat-sys/riscv"]

[dependencies]
num-traits = "0.2.12"

[dependencies.softfloat-sys]
version = "0.1.3"
default-features = false

[dev-dependencies]
simple-soft-float = "0.1.0"

[package.metadata.release]
dev-version-ext             = "pre"
pre-release-commit-message  = "Prepare to v{{version}}"
post-release-commit-message = "Start next development iteration v{{version}}"
tag-message                 = "Bump version to {{version}}"
tag-prefix                  = ""
pre-release-replacements    = [
    {file = "README.md", search = "softfloat-wrapper = \"[a-z0-9\\.-]+\"", replace = "softfloat-wrapper = \"{{version}}\""},
    {file = "README.md", search = "version = \"[a-z0-9\\.-]+\"", replace = "version = \"{{version}}\""},
]
